# market-places-backend

./: .flake8  pyproject.toml
marketplaces/Ozon/: apps.py
marketplaces/marketplaces/: asgi.py  settings.py  urls.py  wsgi.py
